src/test/compile-fail/does-nothing.rs
// error-pattern: unresolved name: `this_does_nothing_what_the`.
fn main() { debug!("doing"); this_does_nothing_what_the; debug!("boing"); }
